--- a/ios/ios.plist
+++ b/ios/ios.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ilottery.rytest.com/ios/ios.ipa</string>
+					<string>https://raw.githubusercontent.com/datiaoge/MaYa/master/RyAccountV.010.457.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>http://ilottery.rytest.com/ios/Icon_big.png</string>
+					<string>https://raw.githubusercontent.com/datiaoge/MaYa/master/ios/Icon_big.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>http://ilottery.rytest.com/ios/Icon_small.png</string>
+					<string>https://raw.githubusercontent.com/datiaoge/MaYa/master/ios/Icon_small.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
