--- a/ios/ios.plist
+++ b/ios/ios.plist
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.yingcaida.account</string>
+				<string>com.yingcaida.accountd</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
